# libdeform

./: CMakeLists.txt  README.md  README.txt
cholmesh/: .cvsignore  CMakeLists.txt  README.txt
cholmesh/include/: cholmod_shared.h  dual.h  mesh.h
cholmesh/src/: cholmod_shared.cpp  mesh.cpp
deform/: .cvsignore  CMakeLists.txt  README.txt  deform.dox
deform/include/: cgaltools.h  cuda_helper.cuh  cuda_tools.cuh  cusp_tools.cuh  laplacian.h  laplacian_COT.h  laplacian_DUAL.h  laplacian_DUAL2.h  laplacian_DUAL2_cuda.cuh  laplacian_DUAL_cuda.cuh  mattools.h  reduce.cuh
deform/src/: cgaltools.cpp  cuda_helper.cu  cusp_tools.cu  dual.cpp  laplacian.cpp  laplacian_COT.cpp  laplacian_DUAL.cpp  laplacian_DUAL2.cpp  laplacian_DUAL2_cuda.cu  laplacian_DUAL_cuda.cu  mattools.cpp  reduce.cu
deform/src/CVS/: Entries  Repository  Root
deformwidget/: .cvsignore  CMakeLists.txt
deformwidget/include/: choltrackball.h  deformwidget.h  framebuffer.h  glController.h  vertexcolormap.h
deformwidget/package/OpenMesh/Apps/QtViewer/: QGLViewerWidget.cc  QGLViewerWidget.hh
deformwidget/src/: choltrackball.cpp  deformwidget.cpp  framebuffer.cpp  main.cpp  vertexcolormap.cpp
include/: defines.h
trackball/: .cvsignore  CMakeLists.txt
trackball/include/: Trackball.h  bool.h  common.h  glTrackball.h  gm.h  gmConst.h  gmMat3.h  gmMat4.h  gmQuat.h  gmUtils.h  gmVec2.h  gmVec3.h  gmVec4.h  gs_VecMath.h
trackball/src/: Trackball.cpp  glTrackball.cpp  gmMat3.cpp  gmMat4.cpp  gmQuat.cpp  gs_VecMath.cpp
